# Manipulator_FetchRobot

./: CMakeLists.txt  README.md  package.xml
fetch_gazebo_visualservoing/: CMakeLists.txt
fetch_gazebo_visualservoing/launch/: simulation.launch
fetch_gazebo_visualservoing/scripts/: simulation.py
launch/: environment.launch  playground.launch
scripts/: simulation.py
worlds/: environment.sdf  test_zone.sdf
