<?xml version="1.0"?>
<package format="1">
  <name>fetch_gazebo_visualservoing</name>
  <version>0.0.0</version>
  <description>Simulation of Visual Servoing on Fetch Robot in Gazebo Environment</description>

  <maintainer email="Jiading.Wen@outlook.com">Jiading Wen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>

</package>
